[project]
name = "statista"
version = "0.6.1"
description = "statistics package"
readme = "README.md"
requires-python = ">=3.11,<4"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farag@gmail.com"},
]


keywords = [
    "statistics",
    "distributions",
    "extreme-value-analysis",
    "probability",
    "sensitivity-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >=5.0.0",
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "notebook<7.0",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["statista", "statista.*"]


[project.urls]
Homepage = "https://github.com/Serapieum-of-alex/statista"
Documentation = "https://github.com/Serapieum-of-alex/statista"
Repository = "https://github.com/Serapieum-of-alex/statista"


[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow.",
    "fast: mark test as fast.",
]

[tool.flake8]
ignore = "E203, E266, E501, W503, E741"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"