[project]
name = "statista"
version = "1.0.0"
description = "statistics package"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farag@gmail.com"},
]


keywords = [
    "statistics",
    "distributions",
    "extreme-value-analysis",
    "probability",
    "sensitivity-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">=3.11,<4"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest-asyncio>=1.2.0",
    "nest-asyncio>=1.6.0",
    "nbval>=0.11.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.0",
    "types-PyYAML>=6.0.12",
]

docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
    "jupyter",
    "commitizen (>=4.8.3,<5.0.0)",
]


[project.urls]
Homepage = "https://github.com/Serapieum-of-alex/statista"
Documentation = "https://github.com/Serapieum-of-alex/statista"
Repository = "https://github.com/Serapieum-of-alex/statista"


[tool.hatch.build.targets.wheel]
packages = ["src/statista"]


[tool.commitizen]
name = "cz_customize"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
changelog_incremental = true
changelog_merge_prerelease = true

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feature: this feature enables customize through config file"
schema = "<type>: <body>"
schema_pattern = "(feat|fix|refactor|perf|build|ci|chore)(\\(.+\\))?: (.+)"
changelog_pattern = "^(feat|fix|refactor|perf|build|ci|chore)(\\(.+\\))?(!)?:"
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "build", "ci", "chore"]

[tool.flake8]
ignore = "E203, E266, E501, W503, E741"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"
count = true


[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]

addopts = [
    "--cov",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=xml:coverage-reports/coverage.xml"
]
testpaths = ["tests"]
norecursedirs = ["docs"]
markers = [
    "slow: mark test as slow.",
    "fast: mark test as fast.",
    "e2e: marks tests as e2e (deselect with '-m \"not e2e\"')",
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]


[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

#[tool.uv]
#managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
